# solo2-gui

./: .gitignore  AGENTS.md  CODE-SIGNING.md  LICENSE  PRIVACY.md  README.md  THIRD_PARTY_NOTICES.md  build_linux.sh  build_linux_appimage.sh  build_linux_deb.sh  build_linux_rpm.sh  build_macos.sh  build_windows.bat  check_deps.py  installer_windows.iss  native_host.spec  pyproject.toml  requirements.txt  solokeys_gui.spec  solokeys_service.spec
.github/workflows/: build-desktop-artifacts.yml  release-desktop-artifacts.yml
docs/: signpath-readiness.md
packaging/linux/: build_package_root.sh  requirements-bundled.txt
packaging/linux/debian/: postinst  postrm  triggers
packaging/linux/desktop/: solokeys-gui.desktop
packaging/linux/native-messaging/: com.solokeys.secrets.firefox.json  com.solokeys.secrets.json
packaging/linux/rpm/: solokeys-gui.spec.in
packaging/linux/udev/: 70-solokeys.rules
rthooks/: rthook_libusb_macos.py  rthook_libusb_windows.py
scripts/: app_version.py  windows_sign.ps1
src/solo2/: __init__.py  clients.py  device.py  discovery.py  errors.py  hid_backend.py  pcsc.py  transport.py
src/solo_gui/: __init__.py  browser_server.py  device_manager.py  device_transport.py  hid_backend.py  logging_utils.py  main.py  native_host.py  native_host_installer.py  oath_bridge.py  solokeys_totp_host.sh  win_hid_proxy.py  win_hid_service.py
src/solo_gui/models/: __init__.py  device.py  device_monitor.py
src/solo_gui/resources/: icon-dark.icns  icon-light.icns
src/solo_gui/utils/: __init__.py  attestation.py  autostart.py  helpers.py  usb_monitor.py  windows_elevation.py
src/solo_gui/views/: __init__.py  main_window.py
src/solo_gui/views/tabs/: __init__.py  admin_tab.py  fido2_tab.py  gpg_tab.py  hacker_tab.py  overview_tab.py  piv_tab.py  secrets_tools_tab.py  settings_tab.py  totp_tab.py  vault_tab.py
src/solo_gui/workers/: __init__.py  admin_worker.py  fido2_worker.py  fido2_worker_simple.py  firmware_worker.py  gpg_worker.py  piv_worker.py  provision_worker.py  totp_worker.py  update_worker.py
